attempt fix for scroll cutoff bug on my phone

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html, body {
 #content {
   max-width: 500px; 
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
